package AdventureGame.Characters;

public class Knight extends Character {
    public void fight() {
        weaponBehaviour.useWeapon();
    }
}
