package AdventureGame.Characters;

public class Troll extends Character {
    public void fight() {
        weaponBehaviour.useWeapon();
    }
}
