package AdventureGame.FightingStyle;

public class AxeBehaviour implements WeaponBehaviour {
    public void useWeapon() {
        System.out.println("Chopping with an axe");
    }
}
