package AdventureGame.Characters;

public class King extends Character {
    public void fight() {
        weaponBehaviour.useWeapon();
    }
}
