package AdventureGame.Characters;

public class Queen extends Character {
    public void fight() {
        weaponBehaviour.useWeapon();
    }
}
