package AdventureGame.FightingStyle;

public class BowAndArrowBehaviour implements WeaponBehaviour {
    public void useWeapon() {
        System.out.println("Shooting with a arrow and bow");
    }
}
