package AdventureGame.FightingStyle;

public class KnifeBahaviour implements WeaponBehaviour {
    public void useWeapon() {
        System.out.println("Cutting with a knife");
    }
}
