package AdventureGame.FightingStyle;

public class SwordBahaviour implements WeaponBehaviour {
    public void useWeapon() {
        System.out.println("Swinging a sword");
    }
}
