package AdventureGame.FightingStyle;

public interface WeaponBehaviour {
    public void useWeapon();
}
