' Generated by UML Generator
' Encoded: ZPC_RuCm4CLtVmgFgIf7dHcga0nLrQcYKeUgms4Ei09sP1-XQff-zff0_yIGYWtEltk-UmzMZi1IKrVCRPNUWOMQomgSYuciIXl2UsbqejwHtx1IPSYbih92nauKluCQDqQJDLM5bXyOvzS7hqbA7daDIY_05YxYYLVJnSlhLSJtHcNi-2tme5MEQoXXhqmp23GEdn5sHYz6UD8Qcyt1bIQqEKZa_TaQvrwnDcsiizXQqyvlYjzmFkntBahgiRnx_8j0wiY2f3u6lYcXUnky_MpFbud2xJmZn5ZN5npIC4-RZjf68pusYFh2XCCIFiz_WQVkcxX01Aalbn-teqs2g2UPoQmcoRE09eaX5I7ysO_hxDT_8SOzlKr1oycPeDQR4HHNg3F_wtq1
' URL: http://www.plantuml.com/plantuml/uml/ZPC_RuCm4CLtVmgFgIf7dHcga0nLrQcYKeUgms4Ei09sP1-XQff-zff0_yIGYWtEltk-UmzMZi1IKrVCRPNUWOMQomgSYuciIXl2UsbqejwHtx1IPSYbih92nauKluCQDqQJDLM5bXyOvzS7hqbA7daDIY_05YxYYLVJnSlhLSJtHcNi-2tme5MEQoXXhqmp23GEdn5sHYz6UD8Qcyt1bIQqEKZa_TaQvrwnDcsiizXQqyvlYjzmFkntBahgiRnx_8j0wiY2f3u6lYcXUnky_MpFbud2xJmZn5ZN5npIC4-RZjf68pusYFh2XCCIFiz_WQVkcxX01Aalbn-teqs2g2UPoQmcoRE09eaX5I7ysO_hxDT_8SOzlKr1oycPeDQR4HHNg3F_wtq1
' Generated on: 2025-12-07T20:09:09.877781

@startuml
skinparam classAttributeIconSize 0
hide circle

class GameController {
  +{static} main(args: String[]): void
}

class KnifeBahaviour {
  +useWeapon(): void
}

class SwordBahaviour {
  +useWeapon(): void
}

interface WeaponBehaviour {
  +useWeapon(): void
}

class BowAndArrowBehaviour {
  +useWeapon(): void
}

class AxeBehaviour {
  +useWeapon(): void
}

class Knight {
  +fight(): void
}

abstract class Character {
  ~weaponBehaviour: WeaponBehaviour
  --
  +fight(): void
  +setWeapon(wb: WeaponBehaviour): void
}

class Queen {
  +fight(): void
}

class King {
  +fight(): void
}

class Troll {
  +fight(): void
}

KnifeBahaviour ..|> WeaponBehaviour
SwordBahaviour ..|> WeaponBehaviour
BowAndArrowBehaviour ..|> WeaponBehaviour
AxeBehaviour ..|> WeaponBehaviour
Knight --|> Character
Character --> WeaponBehaviour
Queen --|> Character
King --|> Character
Troll --|> Character
@enduml